# Born2BSaltys_Infinity_Orchestrator

./: .gitignore  BEGINNERS_GUIDE.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  Downloads GUIDE.md  NOTICE  Push Github.bat  README.md  build.rs
.claude/: orchestrator-handoff.md  spec-authority.md
.claude/agents/: plan-implementer.md
.claude/skills/orchestrator/: SKILL.md
.github/workflows/: ci.yml  release.yml
infinity_orchestrator/: HANDOFF.md  INSTALL_WORKFLOWS_TRACE.md  PENDING_VERIFICATION.md  PR11_REVIEW.md  SPEC-per-modlist-download-sources.md  SPEC.md
infinity_orchestrator/plan/: decision-log.md  overview.md  phase-01-theme-and-shell.md  phase-02-nav-routing.md  phase-03-modlist-registry.md  phase-04-settings.md  phase-05-home-install-paste.md  phase-06-create-workspace-shell.md  phase-07-install-runtime.md  phase-08-explicit-reproduce-path.md  phase-08-per-modlist-download-sources.md  phase-08-popup-reskins-polish.md  revision-log.md
infinity_orchestrator/plan/archive/: phase-01-theme-and-shell.md  phase-02-nav-routing.md  phase-03-modlist-registry.md  phase-04-settings.md  phase-05-home-install-paste.md  phase-06-create-workspace-shell.md  phase-07-install-runtime.md
infinity_orchestrator/wireframe-preview/: GAP_ANALYSIS.md  app.jsx  build.html  build.mjs  index.html  package-lock.json  package.json  screens.jsx
src/: CLAUDE.md  lib.rs  main.rs  platform_defaults.rs
src/app/: dispatch.rs  mod.rs  normal.rs  scan_components.rs  scan_languages.rs
src/cli/: args.rs  mod.rs
src/compat/: mod.rs  model.rs  tp2_parse.rs  validator.rs
src/compat/validator/: helpers.rs
src/config/: options.rs
src/core/: CLAUDE.md  platform_defaults.rs
src/core/app/: CLAUDE.md  app.rs  app_bootstrap.rs  app_bootstrap_init.rs  app_compat_flow.rs  app_lifecycle.rs  app_methods.rs  app_nav.rs  app_nav_actions.rs  app_nav_ui.rs  app_step1_github_oauth.rs  app_step2_compat_overlay.rs  app_step2_log.rs  app_step2_router.rs  app_step2_saved_log_flow.rs  app_step2_scan.rs  app_step2_scan_events.rs  app_step2_scan_lifecycle.rs  app_step2_sync_flow.rs  app_step2_update_asset_pick.rs  app_step2_update_check.rs  app_step2_update_check_worker.rs  app_step2_update_download.rs  app_step2_update_extract.rs  app_step2_update_extract_archive.rs  app_step2_update_extract_plan.rs  app_step2_update_github.rs  app_step2_update_morpheus_mart.rs  app_step2_update_policy.rs  app_step2_update_preview.rs  app_step2_update_source_refs.rs  app_step2_update_weaselmods.rs  app_step3_sync_flow.rs  app_step4_flow.rs  app_step5_flow.rs  app_tp2_metadata.rs  app_update_loop.rs  compat_conflict_parse.rs  compat_conflict_runtime.rs  compat_conflict_scan.rs  (+66 more)
src/core/cli/: args.rs
src/core/compat/: model.rs  tp2_parse.rs  tp2_parse_rules.rs  validator.rs  validator_helpers.rs  validator_rule_handlers.rs  validator_rule_handlers_any.rs  validator_rule_handlers_misc.rs  validator_rules.rs
src/core/config/: default_mod_downloads.toml  default_step2_compat_rules.toml  mod.rs  options.rs  user_mod_downloads.toml  user_step2_compat_rules.toml
src/core/install/: mod.rs  plan.rs  runner.rs  weidu_exec.rs  (+9 more)
src/install/: plan.rs  weidu_scan.rs
src/install_runtime/: active_modlist_source_path.rs  archive_skip.rs  archive_skip_async.rs  archive_store.rs  auto_build_driver.rs  destination_prep.rs  extract_intercept.rs  extract_parallel.rs  flag_policies.rs  flag_policies_eet.rs  flag_policies_log.rs  flag_policies_single_game.rs  fork_pipeline_arm.rs  import_code_writer.rs  install_concurrency.rs  install_modlist_registration.rs  mod.rs  per_install_dirs.rs  rail_lock_reason.rs  registry_transition.rs  reinstall_route.rs  settings_sanitizer.rs  start_hooks.rs  stream_downloader.rs
src/logging/: setup.rs
src/mods/: component.rs  discovery.rs  log_file.rs
src/registry/: dev_seed.rs  errors.rs  ids.rs  mod.rs  model.rs  operations.rs  operations_create.rs  operations_rename.rs  persistence_cycle.rs  share_export.rs  store.rs  store_workspace.rs  workspace_model.rs
src/settings/: CLAUDE.md  mod.rs  model.rs  redesign_fields.rs  redesign_store.rs  store.rs
src/ui/: CLAUDE.md  app.rs  app_bootstrap.rs  app_lifecycle.rs  app_methods.rs  app_nav_ui.rs  app_step2_log.rs  app_step2_router.rs  app_update_loop.rs  layout.rs  mod.rs  run.rs  state.rs  state_convert.rs  state_nav.rs  state_validation.rs  step2_worker.rs
tests/: runtime_trace_dl_v4.rs  ui_snapshot_c5_rail_lock.rs  ui_snapshot_create.rs  ui_snapshot_dl_banner.rs  ui_snapshot_dl_window.rs  ui_snapshot_dl_window_v2.rs  ui_snapshot_dl_window_v3.rs  ui_snapshot_dl_window_v4.rs  ui_snapshot_downloading.rs  ui_snapshot_fork_pipeline.rs  ui_snapshot_home_rename.rs  ui_snapshot_item3_step5.rs  ui_snapshot_lock_icon_popup.rs  ui_snapshot_p8_t10_notifications.rs  ui_snapshot_p8_t1_t4_compat_tree_details.rs  ui_snapshot_p8_visuals_and_shadows.rs  ui_snapshot_paste_dest.rs  ui_snapshot_popup_collapse_radial_bg.rs  ui_snapshot_rebrand.rs  ui_snapshot_stage4_progress.rs  ui_snapshot_step2_polish.rs  ui_snapshot_step3_list_body.rs  ui_snapshot_step3_polish.rs  ui_snapshot_tab_seam.rs  ui_snapshot_workspace_step5.rs  ui_snapshot_workspace_step5_console_clip.rs  ui_snapshot_ws_step5_success.rs
(+757 files in other folders)
